fix: adding underlines into JumpNav again

--- a/src/account-settings/_style.scss
+++ b/src/account-settings/_style.scss
@@ -20,6 +20,9 @@
     }
     li {
       margin-bottom: .5rem;
+      a {
+        text-decoration: underline;
+      }
     }
   }
 
@@ -29,7 +32,7 @@
   }
   .account-section {
     // These properties together will shift the hashlink position
-    margin-bottom: map-get($spacers, 5); 
+    margin-bottom: map-get($spacers, 5);
     padding-top: 1rem;
   }
 }
